@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - use colour in log messages for greater visibility
 
 0.006     2014-11-06 04:35:42Z
           - now also checking for premature prereq calculation, given a new
